# SimpleBillingSystem

./: CMakeLists.txt  DEV_GUIDE.md  Main.qml  README.md  main.cpp  productconfig.cpp  productconfig.h  products.json
